feat: GET /roots endpoint
